# LumaireJ-tests

./: .gitignore  .pdm-python  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
schemas/: journal.py
tests/api/: test_journal.py
tests/api/clients/: api_client.py
tests/api/schemas/: journal_schema.py
tests/api/tests/: test_journal_api.py
tests/e2e/: conftest.py
tests/e2e/pages/: journal_page.py
tests/e2e/tests/: test_journaling_ui.py
tests/shared/: __init__.py  constants.py  fixtures.py  test_data.py
