[project]
name = "LumaireJ-Tests"
version = "0.1.0"
description = "API & E2E tests for LumaireJ"
authors = [{ name = "Darli Ro", email = "glicerinn@gmail.com" }]
requires-python = "==3.13.*"
readme = "README.md"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
test = "pytest -sv"
test-allure = "pytest -sv --alluredir=allure-results"
report = "allure generate allure-results --clean -o allure-report"
open_report = "allure open allure-report"
lint = "ruff check tests/"
fix = "ruff check tests/ --fix"
format = "ruff format tests/"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-sv --alluredir=allure-results --cov=tests --cov-report=xml"
markers = [
    "smoke: smoke tests",
    "regression: resression tests",
    "api: API suite",
    "e2e: E2E scenario",
    "journal: journal functionality tests"
]

[tool.ruff]
target-version = "py313"
line-length = 100
indent-width = 4
exclude = ["__pypackages__", ".venv", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.3",
    "requests>=2.32.4",
    "allure-pytest>=2.14.3",
    "pydantic>=2.11.7",
    "dotenv>=0.9.9",
    "typing>=3.7.4.3"
]

[project.optional-dependencies]
e2e = [
    "playwright>=1.54.0",
    "pytest-playwright>=0.7.0",
]
